fixed modal responsive and fixed banner overflow

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -31,6 +31,7 @@
     background-size: cover; /* Better responsiveness for background */
     background-repeat: no-repeat;
     position: relative;
+    overflow: hidden;
 }
 
 .organic-title {
